# hagelin

./: .gitignore  README.md  config.h.in  meson.build
C52CreateDataBase/: C52CreateDataBase.cpp
Check_KeyLists/: Check_Keylists_main.cpp  ValidateDrumOldBroken.cpp  ValidateDrumOldBroken.hpp  ValidateDrumOldFixed.cpp  ValidateDrumOldFixed.hpp  meson.build
DerivedData/hegelin/Index/UniDB/hegelin.xcindex/v11/p54906/: lock.mdb
KeyListDataBase/: KeyListDataBase.cpp  KeyListDataBase.hpp  KeyListDataBase_main.cpp  meson.build
M209Group/: M209Group.cpp  M209Group.hpp  M209Group_main.cpp  meson.build
c52/: C52.cpp  C52.hpp  C52GenKey.cpp  C52Keywheel.cpp  C52Keywheel.hpp  C52_main.cpp  meson.build
data/C52NET/: 20190101.c52key  20190102.c52key  20190103.c52key  20190104.c52key  20190105.c52key  20190106.c52key  20190107.c52key  20190108.c52key  20190109.c52key  20190110.c52key  20190111.c52key  20190112.c52key  20190113.c52key  20190114.c52key  20190115.c52key  20190116.c52key  20190117.c52key  20190118.c52key  20190119.c52key  20190120.c52key  20190121.c52key  20190122.c52key  20190123.c52key  20190124.c52key  20190125.c52key  20190126.c52key  20190127.c52key  20190128.c52key  20190129.c52key  20190130.c52key  20190131.c52key  20190201.c52key  20190202.c52key  20190203.c52key  20190204.c52key  20190205.c52key  20190206.c52key  20190207.c52key  20190208.c52key  20190209.c52key  (+325 more)
data/CX52NET/: 20190101.c52key  20190102.c52key  20190103.c52key  20190104.c52key  20190105.c52key  20190106.c52key  20190107.c52key  20190108.c52key  20190109.c52key  20190110.c52key  20190111.c52key  20190112.c52key  20190113.c52key  20190114.c52key  20190115.c52key  20190116.c52key  20190117.c52key  20190118.c52key  20190119.c52key  20190120.c52key  20190121.c52key  20190122.c52key  20190123.c52key  20190124.c52key  20190125.c52key  20190126.c52key  20190127.c52key  20190128.c52key  20190129.c52key  20190130.c52key  20190131.c52key  20190201.c52key  20190202.c52key  20190203.c52key  20190204.c52key  20190205.c52key  20190206.c52key  20190207.c52key  20190208.c52key  20190209.c52key  (+325 more)
doc/: M-209.webloc  Technical Manual Converter M-209.webloc  USS Pampanito - CSP-1500 Key List.webloc  c52.mansrc  hagelin.mansrc  ilord.com- M-209 Manual.webloc  m209.mansrc  meson.build
doc/1944 M209 Technical Manual Appendices/: Appendix II Good Drums.txt  Trial vs Appendices.xlsx
hagelin.xcodeproj/: project.pbxproj
hagelin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
hagelin.xcodeproj/xcuserdata/jdunn.xcuserdatad/xcschemes/: xcschememanagement.plist
hegelin/: main.cpp
hegelin.xcodeproj/: project.pbxproj
hegelin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
hegelin.xcodeproj/xcuserdata/jdunn.xcuserdatad/xcschemes/: xcschememanagement.plist
m209/: .meson.build.swp  AppendixII.cpp  Keywheel.cc  Keywheel.h  M209.cc  M209.h  M209GenKey.cc  hagelin.h  m209_main.cc  meson.build
python/: meson.build
python_old/: m209-indicator.pysrc  m209-keylist.pysrc  meson.build
samples/: FM.txt  MB.txt
test_c52/: meson.build  test_c52.cpp
test_m209/: meson.build  test_m209.cpp
tests/: 20191015.c52key  BC-52 Key Setting  DR.C52  MB.m209key  cipher-test  cipher.txt  cipher2_c52.txt  cipher_A.txt  cipher_c52.txt  cipher_c52_AutoKey.txt  cipher_c52_AutoMsg.txt  keyread-test  meson.build  plain.txt  test_m209.cpp
tests_old/: deciphered.txt  mangled.m209key
